# zel

./: Cargo.toml  Makefile  README.md  devenv.nix  test.zl
examples/: challenge1.zl  challenge2.zl  compile_test.zl  each_expr  each_expr.zl  fib.zl  import_file.zl  loops.zl  print_input.zl  semantic_error.zl  type_error.zl  vec.zl
src/: compile.rs  compiler.rs  comptime.rs  error.rs  eval.rs  func.rs  lexer.rs  lib.rs  main.rs  parse.rs  parser.rs  scope.rs  semantic.rs  token.rs  types.rs  value.rs
src/ast/: expr.rs  literal.rs  mod.rs  ops.rs  top_level.rs
src/compiler/: error.rs  mod.rs  translator.rs  val.rs
src/eval/: context.rs  variable.rs
src/lexer/: token.rs
src/parse/: expr.rs  ops.rs
src/semantic/: context.rs  semantic_vars.rs  top_level.rs  util.rs
src/types/: mod.rs
