[package]
name = "zel"
description = "The compiler for the zel programming language"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
thiserror = "2.0.12"
